Intégrer un champ "email" au formulaire de création de compte. Implémenter l'envoi automatique d'un email de confirmation après l'inscription. Ajouter une pagination à l'interface d'administration.